Nucleo Ops extract service 4
